--- a/abc-company-product.properties
+++ b/abc-company-product.properties
@@ -4,7 +4,7 @@ server.port=8081
 ## Spring datasource.
 spring.datasource.driver.class=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ordermanagementdb
-spring.datasource.username=admin
+spring.datasource.username=root
 spring.datasource.password=admin
  
 ## Hibernate properties.
