--- a/abc-company-order.properties
+++ b/abc-company-order.properties
@@ -1,5 +1,5 @@
 spring.application.name=abc-order-service
-server.port=8083
+server.port=8093
 
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 ribbon.eureka.enabled=true
@@ -7,7 +7,7 @@ ribbon.eureka.enabled=true
 ## Spring datasource.
 spring.datasource.driver.class=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ordermanagementdb
-spring.datasource.username=admin
+spring.datasource.username=root
 spring.datasource.password=admin
  
 ## Hibernate properties.
