--- a/abc-company-customer.properties
+++ b/abc-company-customer.properties
@@ -5,7 +5,7 @@ spring.application.name=abc-customer-service
 ## Spring datasource.
 spring.datasource.driver.class=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ordermanagementdb
-spring.datasource.username=admin
+spring.datasource.username=root
 spring.datasource.password=admin
  
 ## Hibernate properties.
