--- a/abc-company-order.properties
+++ b/abc-company-order.properties
@@ -1,4 +1,4 @@
-spring.application.name=abc-order-service
+spring.application.name=abc-company-order
 server.port=8092
 
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
