--- a/abc-company-eurekazuul.properties
+++ b/abc-company-eurekazuul.properties
@@ -1,20 +1,20 @@
-spring.application.name=abc-eurekazuul-service
+spring.application.name=abc-company-eurekazuul
 server.port=8762
 
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
 ribbon.eureka.enabled=true
 
-zuul.routes.abc-product-service.path=/product/**
-zuul.routes.abc-product-service.serviceId=abc-product-service
-zuul.routes.abc-product-service.strip-prefix=false
+zuul.routes.abc-company-product.path=/product/**
+zuul.routes.abc-company-product.serviceId=abc-product-service
+zuul.routes.abc-company-product.strip-prefix=false
 
-zuul.routes.abc-order-service.path=/order/**
-zuul.routes.abc-order-service.serviceId=abc-order-service
-zuul.routes.abc-order-service.strip-prefix=false
+zuul.routes.abc-company-order.path=/order/**
+zuul.routes.abc-company-order.serviceId=abc-order-service
+zuul.routes.abc-company-order.strip-prefix=false
 
-zuul.routes.abc-customer-service.path=/customer/**
-zuul.routes.abc-customer-service.serviceId=abc-customer-service
-zuul.routes.abc-customer-service.strip-prefix=false
+zuul.routes.abc-company-customer.path=/customer/**
+zuul.routes.abc-company-customer.serviceId=abc-customer-service
+zuul.routes.abc-company-customer.strip-prefix=false
 
 zuul.host.connect-timeout-millis=60000
 zuul.host.socket-timeout-millis=60000
