--- a/abc-company-customer.properties
+++ b/abc-company-customer.properties
@@ -1,5 +1,5 @@
-server.port=8093
-#done get This
+server.port=8085
+
 spring.application.name=abc-customer-service
 
 ## Spring datasource.
@@ -10,7 +10,8 @@ spring.datasource.password=admin
  
 ## Hibernate properties.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-
+ 
+## Show sql query.
 spring.jpa.show-sql=true
  
 ## Hibernate ddl auto.
